@@ -394,6 +394,9 @@ Trunk (unreleased changes)
     HADOOP-3443. Avoid copying map output across partitions when renaming a
     single spill. (omalley via cdouglas)
 
+    HADOOP-3454. Fix Text::find to search only valid byte ranges. (Chad Whipkey
+    via cdouglas)
+
 Release 0.17.0 - 2008-05-18
 
   INCOMPATIBLE CHANGES
